src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__enum_with_qualified_member_variant_should_error.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordParensClose but found '.Fast, Running.Slow'
  ┌─ <internal>:2:41
  │
2 │         TYPE State : (Idle := 0, Running.Fast, Running.Slow);
  │                                         ^^^^^^^^^^^^^^^^^^^ Unexpected token: expected KeywordParensClose but found '.Fast, Running.Slow'
